[package]
name = "bedrock-server-updater"
version = "0.1.0"
edition = "2021"

[[bin]]
name="bedrock_server_updater"
path="src/main.rs"

[[bin]]
name="testclosure"
path="test/testclosure.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.14.0"
tempdir = "0.3.7"
ureq = "2.5.0"
web_server = "0.4.2"
zip = "0.6.4"
