[package]
name = "bedrock-server-updater"
version = "0.1.0"
edition = "2021"

[[bin]]
name="bedrock_server_updater"
path="src/main.rs"

[[bin]]
name="testclosure"
path="test/testclosure.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = "=1.6.0"  # Compatible with Rust 2021
confy = "0.5.1"
regex = "1.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
scraper = "0.15.0"
ssh2 = "0.9.4"
tempdir = "0.3.7"
ureq = "2.5.0"
web_server = "0.4.2"
zip = "0.6.4"
